<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<Button
		android:drawableLeft="@android:drawable/ic_menu_add"
		android:text="@string/ZahlungErfassen"
		android:id="@+id/ZahlungErfassen"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:minHeight="70px"
		android:baselineAligned="false"/>
		
	<Button
		android:drawableLeft="@android:drawable/ic_menu_search"
		android:text="@string/ZahlungenAnzeigen"
		android:id="@+id/ZahlungAnzeigen"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:minHeight="70px"
		android:baselineAligned="false"/>
		
	<Button
		android:drawableLeft="@android:drawable/ic_menu_info_details"
		android:text="@string/Saldo"
		android:id="@+id/Saldo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:minHeight="70px"
		android:baselineAligned="false"/>

	<Button
		android:drawableLeft="@android:drawable/ic_menu_info_details"
		android:text="@string/Kontobewegungen"
		android:id="@+id/Kontobewegungen"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:minHeight="70px"
		android:baselineAligned="false"/>
</LinearLayout>